# python-slant

./: main.py  pyproject.toml  slant.c  solver.c
slant/: board.py  game.py  loop_check.py  play_loop_terminal.py  solvers.py
