[tool.poetry]
name = "slant-python"
version = "0.1.0"
description = ""
authors = ["Mickael Kerbrat <stolati@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
disjoint-set = "^0.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
